# e_Kom

./: .env.example  Dockerfile  README.md  docker-compose.yml
src/: pyproject.toml
src/project/: app.py  main.py
src/project/config/: base.py
src/project/core/: abstract_repository.py  mongodb_repository.py
src/project/db/: mongo_db.py
src/project/enums/: types_enums.py
src/project/fields/dto/: fields_dto.py
src/project/fields/schemas/: fields_schemas.py
src/project/fields/services/: fields_converter_service.py
src/project/form_templates/: routers.py
src/project/form_templates/dto/: forms_dto.py
src/project/form_templates/repositories/: mongo_db_repository.py
src/project/form_templates/schemas/: forms_schemas.py
src/project/form_templates/services/: forms_service.py
src/project/form_templates/tests/: test_search_suitable_template.py
