[tool.poetry]
name = "form-determinant"
version = "0.1.0"
description = ""
authors = ["rudich <rudi4.clarinet@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
pymongo = "^4.10.1"
email-validator = "^2.2.0"
uvicorn = "^0.33.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
